# entity_doctor

./: .env  .gitignore  check_lost.py  copy_to.py  detect_entity.py  main.py  pyproject.toml  read_env.py  remove_entity.py
src/: add_entity.py  change_case.py  check_lost.py  copy_to.py  detect_entity.py  main.py  read_env.py  remove_entity.py
src/doctor/: add_entity.py  change_case.py  check_lost.py  common.py  copy_to.py  detect_entity.py  main.py  read_env.py  remove_entity.py
